--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.5.6",
     "next": "latest",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "@types/styled-components": "5.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "3.5.2"
+    "@types/styled-components": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-react": "^7.19.0",
+    "typescript": "3.8.3"
   },
   "license": "ISC"
 }
